# asp

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.connector  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-agent.txt  requirements-base.txt  requirements.txt  todo.md
agent/: agent.py  categorizer.py  config.py  db.py  indexer_client.py  main.py  pipeline.py  planner.py  prompts.py
agent/models/: schemas.py
agent/rag/: knowledge_base.py  rag.py  vector_store.py
connector/: config.py  main.py  schemas.py  test_webhook.ps1  test_webhook.sh
connector/broker/: rabbit.py  rabbit_req.py
connector/normalizer/: base.py  ecs.py
connector/normalizer/wazuh/: wazuh_base.py  wazuh_normalizer.py
connector/siem_clients/: base.py  indexer.py  wazuh.py
connector/ui/: index.html
connector/webhook/: listener.py
docs/: DOCUMENTATION.md  agent-architecture.md  architecture.md  connector-architecture.md  connector-plan.md  data-models.md  deployment.md  knowledge-base.md  plan.md  task.txt
knowledge/: brute-force.md  malware.md  policy-violation.md  reconnaissance.md  unauthorized-access.md  web-exploit.md  Подбор пароля от SSH.md
scripts/: add_alert.py  check_indexer.py  ollama-init.sh  test_webhook.sh
