[project]
name = "Agentic SOC Platform"
version = "0.1.0"
description = "AI agent system for information security event analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aio-pika>=9.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain==0.3.26",
    "langchain-core",
    "langchain-ollama==0.3.5",
    "langchain-openai==0.3.28",
    "langgraph==0.5.3",
    "langchain-chroma>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
